# garuda

./: .buildinfo  .gitignore  README.md  changelog.html  contributing.html  demo.py  demo_geothermal.py  fluid_properties.html  garuda.html  garuda_gui.py  genindex.html  grid.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rock_properties.html  search.html  searchindex.js  setup_github_repo.sh  single_phase.html  test_integration.py  thermal.html  tpfa_solver.html  well_models.html
.doctrees/: changelog.doctree  contributing.doctree  fluid_properties.doctree  garuda.doctree  grid.doctree  index.doctree  modules.doctree  rock_properties.doctree  single_phase.doctree  thermal.doctree  tpfa_solver.doctree  well_models.doctree
.doctrees/user_guide/: examples.doctree  grid.doctree  installation.doctree  physics.doctree  quickstart.doctree  solver.doctree  thermal.doctree
.github/workflows/: ci.yml
_modules/: index.html
_modules/garuda/core/: dual_porosity.html  fluid_properties.html  grid.html  iapws_properties.html  region_thermodynamics.html  rock_properties.html  source_network.html  tpfa_solver.html
_modules/garuda/physics/: capillary_pressure.html  multiphase.html  relative_permeability.html  single_phase.html  thermal.html  well_models.html
_modules/garuda/solvers/: petsc_solver.html
_sources/: changelog.rst.txt  garuda.rst.txt  modules.rst.txt  thermal.rst.txt  well_models.rst.txt
_sources/user_guide/: grid.rst.txt  installation.rst.txt  physics.rst.txt  quickstart.rst.txt
docs/: BRANDING_SUMMARY.md  GEOTHERMAL_DESIGN.md  GITHUB_SETUP.md  INTEGRATION_PLAN.md  NAMING_PROPOSAL.md  PROGRESS.md  RESEARCH_PROPOSAL.md  conf.py  contributing.rst  fluid_properties.rst  grid.rst  index.rst  rock_properties.rst  single_phase.rst  tpfa_solver.rst
docs/user_guide/: examples.rst  solver.rst  thermal.rst
examples/: example_1d_single_phase.py  example_2d_single_phase.py  geothermal_field_indonesia.py
garuda/: __init__.py
garuda/core/: dual_porosity.py  fluid_properties.py  grid.py  iapws_properties.py  region_thermodynamics.py  rock_properties.py  source_network.py  tpfa_solver.py
garuda/gui/: __init__.py  dual_porosity.py  grid_builder.py  home.py  iapws.py  multiphase.py  single_phase.py  source_network.py  thermodynamics.py  utils.py  visualizer_3d.py  well_model.py
garuda/physics/: capillary_pressure.py  multiphase.py  relative_permeability.py  single_phase.py  thermal.py  well_models.py
garuda/solvers/: __init__.py  petsc_solver.py
tests/: run_tests.py  test_benchmarks.py  test_capillary_pressure.py  test_dual_porosity.py  test_fluid_properties.py  test_grid.py  test_grid_2d_3d.py  test_grid_no_numpy.py  test_iapws.py  test_multiphase.py  test_petsc_solver.py  test_physics.py  test_region_thermodynamics.py  test_relative_permeability.py  test_rock_properties.py  test_single_phase.py  test_source_network.py  test_thermal.py  test_tpfa_solver.py  validate_grid_logic.py
user_guide/: examples.html  grid.html  installation.html  physics.html  quickstart.html  solver.html  thermal.html
